# TACTICS

./: .buildinfo  .gitattributes  .gitignore  Dataset_init_analysis.ipynb  Dataset_init_analysis_Mpro.ipynb  Docking_Mpro.ipynb  Docking_adenosine.ipynb  LICENSE  README.md  configuration.html  enumeration_utils.py  experiment_template.py  experiment_utils.py  genindex.html  index.html  library_analysis.html  library_enumeration.html  library_enumeration_functions.py  objects.inv  pyproject.toml  reorganization.md  requirements.txt  search.html  searchindex.js  setup.py  thompson_sampling.html
.github/workflows/: docs.yml  publish.yml  test.yml
.ipynb_checkpoints/: Dataset_init_analysis-checkpoint.ipynb
Data/M_pro/: .gitattributes  carboxylic_acids.smi  primary_amines_aa.smi
Data/adenosine_A2B/: aldehydes.smi  dioxo.smi
PRISMS/: __init__.py
PRISMS/library_enumeration/: enumeration_utils.py  generate_products.py
PRISMS/thompson_sampling/: __init__.py  baseline.py  disallow_tracker_test.py  main.py  thompson_sampling.py  ts_main.py  ts_utils.py
TACTICS/: README.md
TACTICS/library_enumeration/: enumeration_utils.py  generate_products.py
TACTICS/thompson_sampling/: baseline.py  main.py
_sources/: configuration.rst.txt  index.rst.txt  library_analysis.rst.txt  library_enumeration.rst.txt  thompson_sampling.rst.txt
data/: README.md
docs/source/: api_reference.rst  conf.py  configuration.rst  index.rst  library_analysis.rst  library_enumeration.rst  thompson_sampling.rst
examples/: README.md  bayes_ucb_example.py  legacy_vs_current_comparison.py  simple_multi_smarts_demo.py  thrombin_notebook_code.py  thrombin_quickstart.py  thrombin_recovery_comparison.py
examples/docking_scores/: products_100_score.txt  products_10_score.txt  products_11_score.txt  products_12_score.txt  products_13_score.txt  products_14_score.txt  products_15_score.txt  products_16_score.txt  products_17_score.txt  products_18_score.txt  products_19_score.txt  products_1_score.txt  products_20_score.txt  products_21_score.txt  products_22_score.txt  products_23_score.txt  products_24_score.txt  products_25_score.txt  products_26_score.txt  products_27_score.txt  products_28_score.txt  products_29_score.txt  products_2_score.txt  products_30_score.txt  products_31_score.txt  products_32_score.txt  products_33_score.txt  products_34_score.txt  products_35_score.txt  products_36_score.txt  products_37_score.txt  products_38_score.txt  products_39_score.txt  products_3_score.txt  products_40_score.txt  products_41_score.txt  products_42_score.txt  products_43_score.txt  products_44_score.txt  products_45_score.txt  (+60 more)
examples/input_files/: acids.smi  amino_acids.smi  amino_acids_deprotected.smi
examples/notebooks/: adenine_dataset.ipynb  legacy_thrombin_results.ipynb  quinazoline_dataset.ipynb  sEH_analysis.ipynb  smarts_toolkit.ipynb
experiments/: README.md
experiments/strategy_benchmarks/: legacy_vs_current_comparison.py  rws_bayesucb_cats_rocs.py  rws_bayesucb_comparison_fixed.py  strategy_recovery_comparison.py  thrombin_recovery_comparison.py  thrombin_strategy_comparison.py
experiments/validation/: legacy_vs_current_rocs.py
experiments/warmup_analysis/: balanced_warmup_variance_comparison.py  balanced_warmup_variance_comparison_rocs.py
outputs/: README.md
src/TACTICS/: README.md  __init__.py
tests/: test_bayes_ucb.py  test_config_direct.py  test_config_validation.py  test_evaluator_integration.py  test_generate_products.py  test_multi_smarts_integration.py  test_product_library_mode.py  test_pydantic_configs.py  test_reaction_sequence.py  test_smarts_router.py  test_strategy_integration.py  test_warmup_integration.py
tests/notebooks/: Boltzmann_Temp.ipynb  random_scores.csv  (+10 more)
tutorials/: custom_evaluator_tester.py  custom_evaluator_tutorial.py  legacy_thrombin_results.ipynb  legacy_vs_current_compariosn.py  legacy_vs_current_comparison.py  library_component_comparison.py  library_enumeration_tutorial.py  reaction_config_builder.py  results.csv  results_analysis.ipynb  thompson_sampling.ipynb  thompson_sampling_tutorial.py
(+9228 files in other folders)
