[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TACTICS"
version = "0.1.0"
description = "Thompson Sampling-Assisted Chemical Targeting and Iterative Compound Selection for Drug Discovery"
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "MIT"}
authors = [
  {name = "Aakankschit Nandkeolyar", email = "anandkeo@uci.edu"},
  {name = "Remco L. van den Broek", email = "r.l.van.den.broek@lacdr.leidenuniv.nl"},
  {name = "Willem Jespers", email = "w.jespers@rug.nl"}
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "rdkit",
    "numpy",
    "pandas",
    "polars",
    "tqdm",
    "sqlitedict",
    "seaborn",
    "matplotlib",
    "altair",
    "joblib",
    "dill",
    "useful_rdkit_utils"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

notebook = [
    "ipython",
    "ipykernel"
]

# Uncomment if you use OpenEye toolkits
# openeye = [
#     "openeye-toolkits"
# ]

[tool.setuptools.packages.find]
where = ["."]
include = ["TACTICS*"]
