[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "TACTICS"
version = "0.1.0"
description = "Thompson Sampling-Assisted Chemical Targeting and Iterative Compound Selection for Drug Discovery"
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "MIT"}
authors = [
  {name = "Aakankschit Nandkeolyar", email = "anandkeo@uci.edu"},
  {name = "Remco L. van den Broek", email = "r.l.van.den.broek@lacdr.leidenuniv.nl"},
  {name = "Willem Jespers", email = "w.jespers@rug.nl"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "rdkit",
    "numpy",
    "pandas",
    "polars",
    "tqdm",
    "sqlitedict",
    "seaborn",
    "matplotlib",
    "altair",
    "joblib",
    "dill",
    "useful_rdkit_utils"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

notebook = [
    "ipython",
    "ipykernel"
]

openeye = [
    "openeye-toolkits"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["TACTICS*"]
